--- a/PPMS_backend/templates/diesel-form.html
+++ b/PPMS_backend/templates/diesel-form.html
@@ -9,25 +9,25 @@
             <h3>Diesel Stock Form</h3>
 
             <fieldset>
-                <input placeholder="Opening Stock" name="openStock" type="text" tabindex="1" autofocus>
+                <input placeholder="Opening Stock" name="openStock" type="number" tabindex="1" autofocus required>
             </fieldset>
             <fieldset>
-                <input placeholder="Receipt Stock" name="receiptStock" type="text" tabindex="2">
+                <input placeholder="Receipt Stock" name="receiptStock" type="number" tabindex="2"required>
             </fieldset>
             <fieldset>
-                <input placeholder="Actual Sale" name="actualSale" type="text" tabindex="3">
+                <input placeholder="Actual Sale" name="actualSale" type="number" tabindex="3"required>
             </fieldset>
             <fieldset>
-                <input placeholder="Product Dip" name="productDip" type="text" tabindex="4">
+                <input placeholder="Product Dip" name="productDip" type="number" tabindex="4"required>
             </fieldset>
             <fieldset>
-                <input placeholder="Actual Dip" name="actualDip" type="text" tabindex="5">
+                <input placeholder="Actual Dip" name="actualDip" type="number" tabindex="5"required>
             </fieldset>
             <fieldset>
-                <input type="text" name="waterCm" placeholder="Water Dip in Cm" tabindex="6">
+                <input type="number" name="waterCm" placeholder="Water Dip in Cm" tabindex="6"required>
             </fieldset>
             <fieldset>
-                <input type="text" name="waterLtr" placeholder="Water Dip in Liters" tabindex="7">
+                <input type="number" name="waterLtr" placeholder="Water Dip in Liters" tabindex="7"required>
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit=.Sending">Submit</button>
