--- a/PPMS_backend/templates/account-form.html
+++ b/PPMS_backend/templates/account-form.html
@@ -10,35 +10,35 @@
             <h3>Account Form</h3>
 
             <fieldset>
-                <input placeholder="Invoice Number" name="invoiceNumber" type="text" tabindex="1" autofocus>
+                <input placeholder="Invoice Number" name="invoiceNumber" type="number" tabindex="1" autofocus>
             </fieldset>
             <fieldset>
-                <input placeholder="Petrol Quantity" name="petrolQuantity" type="text" tabindex="2">
+                <input placeholder="Petrol Quantity" name="petrolQuantity" type="number" tabindex="2">
             </fieldset>
             <fieldset>
-                <input placeholder="Diesel Quantity" name="dieselQuantity" type="text" tabindex="3">
+                <input placeholder="Diesel Quantity" name="dieselQuantity" type="number" tabindex="3">
             </fieldset>
             <fieldset>
-                <input placeholder="Lubricant Quantity" name="lubricantQuantity" type="text" tabindex="4">
+                <input placeholder="Lubricant Quantity" name="lubricantQuantity" type="number" tabindex="4">
             </fieldset>
             <fieldset>
-                <input placeholder="Invoice Amount" name="invoiceAount" type="text" tabindex="5">
+                <input placeholder="Invoice Amount" name="invoiceAount" type="number" tabindex="5">
             </fieldset>
             <fieldset>
-                <input type="text" name="payNumber" placeholder="Cheque/Demand draft Number" tabindex="6">
+                <input type="number" name="payNumber" placeholder="Cheque/Demand draft Number" tabindex="6">
             </fieldset>
             <fieldset>
                 <p>Payment Date</p>
                 <input type="date" name="paymentDate" tabindex="7">
             </fieldset>
             <fieldset>
-                <input type="text" name="amountPaid" placeholder="Amount Paid" tabindex="8">
+                <input type="number" name="amountPaid" placeholder="Amount Paid" tabindex="8">
             </fieldset>
             <fieldset>
                 <input type="text" name="comment" tabindex="9" placeholder="Comment if any">
             </fieldset>
             <fieldset>
-                <input type="text" name="shortExcess" placeholder="Short/Excess any" tabindex="10">
+                <input type="number" name="shortExcess" placeholder="Short/Excess any" tabindex="10">
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit=.Sending">Submit</button>
