--- a/PPMS_backend/templates/diesel-form.html
+++ b/PPMS_backend/templates/diesel-form.html
@@ -9,7 +9,7 @@
             <h3>Diesel Stock Form</h3>
 
             <fieldset>
-                <input placeholder="Opening Stock" name="openStock" type="number" tabindex="1" autofocus required>
+                <input placeholder="Opening Stock" name="openStock"step="0.01" min="0" max="10000" type="number" tabindex="1" autofocus required>
             </fieldset>
             <fieldset>
                 <input placeholder="Receipt Stock" name="receiptStock" type="number" tabindex="2"required>
@@ -18,10 +18,10 @@
                 <input placeholder="Actual Sale" name="actualSale" type="number" tabindex="3"required>
             </fieldset>
             <fieldset>
-                <input placeholder="Product Dip" name="productDip" type="number" tabindex="4"required>
+                <input placeholder="Product Dip"step="0.01" min="0" max="10000" name="productDip" type="number" tabindex="4"required>
             </fieldset>
             <fieldset>
-                <input placeholder="Actual Dip" name="actualDip" type="number" tabindex="5"required>
+                <input placeholder="Actual Dip"step="0.01" min="0" max="10000" name="actualDip" type="number" tabindex="5"required>
             </fieldset>
             <fieldset>
                 <input type="number" name="waterCm" placeholder="Water Dip in Cm" tabindex="6"required>
@@ -30,7 +30,7 @@
                 <input type="number" name="waterLtr" placeholder="Water Dip in Liters" tabindex="7"required>
             </fieldset>
             <fieldset>
-                <button name="submit" type="submit" id="contact-submit" data-submit=.Sending">Submit</button>
+                <button name="submit" type="submit" id="contact-submit" data-submit="Sending">Submit</button>
             </fieldset>
         </form>
     </div>
