--- a/PPMS_backend/templates/petrol-stock-form.html
+++ b/PPMS_backend/templates/petrol-stock-form.html
@@ -8,25 +8,25 @@
             {% csrf_token %}
             <h3>Petrol Stock Form</h3>
             <fieldset>
-                <input placeholder="Opening Stock" name="openStock" type="text" tabindex="1" autofocus>
+                <input placeholder="Opening Stock" name="openStock" type="number" tabindex="1" step="0.01" min="0" max="10000" autofocus>
             </fieldset>
             <fieldset>
-                <input placeholder="Receipt Stock" name="receiptStock" type="text" tabindex="2">
+                <input placeholder="Receipt Stock" name="receiptStock" type="number" tabindex="2">
             </fieldset>
             <fieldset>
-                <input placeholder="Actual Sale" name="actualSale" type="text" tabindex="3">
+                <input placeholder="Actual Sale" name="actualSale" type="number" tabindex="3">
             </fieldset>
             <fieldset>
-                <input placeholder="Product Dip" name="productDip" type="text" tabindex="4">
+                <input placeholder="Product Dip"step="0.01" min="0" max="10000" name="productDip" type="number" tabindex="4">
             </fieldset>
             <fieldset>
-                <input placeholder="Actual Dip" name="actualDip" type="text" tabindex="5">
+                <input placeholder="Actual Dip"step="0.01" min="0" max="10000" name="actualDip" type="number" tabindex="5">
             </fieldset>
             <fieldset>
-                <input type="text" name="waterCm" placeholder="Water Dip in Cm" tabindex="6">
+                <input type="number" name="waterCm" placeholder="Water Dip in Cm" tabindex="6">
             </fieldset>
             <fieldset>
-                <input type="text" name="waterLtr" placeholder="Water Dip in Liters" tabindex="7">
+                <input type="number" name="waterLtr" placeholder="Water Dip in Liters" tabindex="7">
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit=.Sending">Submit</button>
