--- a/PPMS_backend/static/css/style.css
+++ b/PPMS_backend/static/css/style.css
@@ -31,6 +31,7 @@ body {
 
 #contact input[type="text"],
 #contact input[type="email"],
+#contact input[type="number"],
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea,
@@ -68,6 +69,7 @@ fieldset {
 }
 
 #contact input[type="text"],
+#contact input[type="number"],
 #contact input[type="email"],
 #contact input[type="tel"],
 #contact input[type="url"],
@@ -80,6 +82,7 @@ fieldset {
 }
 
 #contact input[type="text"]:hover,
+#contact input[type="number"],
 #contact input[type="email"]:hover,
 #contact input[type="tel"]:hover,
 #contact input[type="url"]:hover,
