--- a/PPMS_backend/templates/base.html
+++ b/PPMS_backend/templates/base.html
@@ -7,15 +7,15 @@
     <title>PPMS</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
-    <link rel="stylesheet" href="{% static "css/AdminLTE.min.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/AdminLTE.min.css' %}">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static "css/_all-skins.min.css" %}">
+    <link rel="stylesheet" href="{% static 'css/_all-skins.min.css' %}">
     <!-- Google Font -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     {% block extracss %}
     {% endblock %}
@@ -52,7 +52,7 @@
             <!-- Sidebar user panel -->
             <div class="user-panel">
                 <div class="pull-left image">
-                    <img src="{% static "img/user2-160x160.jpg" %}" class="img-circle" alt="User Image">
+                    <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
                 </div>
                 <div class="pull-left info">
                     <p>Alexander Pierce</p>
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="treeview">
-                    <a href="{% url "home" %}">
+                    <a href="{% url 'home' %}">
                         <i class="fa fa-pie-chart"></i>
                         <span>Diesel </span>
                         <span class="pull-right-container">
@@ -83,7 +83,7 @@
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="{% url 'diesel' %}"><i class="fa fa-circle-o text-red"></i>Diesel Stock</a></li>
-                        <li><a href={% url 'diesel-nozzle' %}><i class="fa fa-circle-o text-aqua"></i> Diesel Nozzle
+                        <li><a href="{% url 'diesel-nozzle' %}"><i class="fa fa-circle-o text-aqua"></i> Diesel Nozzle
                         </a></li>
                         <li><a href="{% url 'diesel-density' %}"><i class="fa fa-circle-o text-yellow"></i> Diesel
                             Density</a></li>
@@ -132,15 +132,15 @@
     </div>
 </div>
 
-<script src="{% static "js/jquery.min.js" %}"></script>
-<script src="{% static "js/jquery-ui.min.js" %}"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
     $.widget.bridge('uibutton', $.ui.button);
 </script>
-<script src="{% static "js/jquery.slimscroll.min.js" %}"></script>
-<script src="{% static "js/fastclick.js" %}"></script>
-<script src="{% static "js/adminlte.min.js" %}"></script>
+<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+<script src="{% static 'js/fastclick.js' %}"></script>
+<script src="{% static 'js/adminlte.min.js' %}"></script>
 <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'js/dataTables.bootstrap.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
