--- a/PPMS_backend/templates/dieselNozzleForm.html
+++ b/PPMS_backend/templates/dieselNozzleForm.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extracss %}
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 {% block content %}
     <div class="container">
