--- a/PPMS_backend/templates/account.html
+++ b/PPMS_backend/templates/account.html
@@ -6,6 +6,7 @@
 {% endblock %}
 {% block content %}
     <!-- Content Header (Page header) -->
+    <div class="head-holder">
     <section class="content-header">
         <h1>
             Account Record
@@ -16,6 +17,7 @@
             <li class="active">Account Record</li>
         </ol>
     </section>
+    </div>
     <section class="content">
         <div class="row">
             <div class="col-xs-12">
