--- a/PPMS_backend/templates/index.html
+++ b/PPMS_backend/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extracss %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% endblock %}
+
 {% block content %}
-    <h1>Hello I welcome you, on this portal</h1>
+<div class="head-holder">
+    <h2>Hello I welcome you, on this portal</h2>
+</div>
 {% endblock %}
