--- a/PPMS_backend/templates/petrol-density.html
+++ b/PPMS_backend/templates/petrol-density.html
@@ -5,22 +5,24 @@
 {% endblock %}
 {% block content %}
     <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <h1>
-            Petrol Density Record
-            <small>All</small>
-        </h1>
-        <ol class="breadcrumb">
-            <li><a href="{% url 'home' %}"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Petrol Density Record</li>
-        </ol>
-    </section>
+    <div class="head-holder">
+        <section class="content-header">
+            <h1>
+                Petrol Density Record
+                <small>All</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="{% url 'home' %}"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li class="active">Petrol Density Record</li>
+            </ol>
+        </section>
+        </div>
     <section class="content">
         <div class="row">
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
-                        <h3 class="box-title"><a href="{% url 'petrol-density-form' %}">Add Record</a></h3>
+                        <h3 class="box-title"><a href="{% url 'petrol-density-form' %}" class="add-record">Add Record</a></h3>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
