--- a/PPMS_backend/templates/account-form.html
+++ b/PPMS_backend/templates/account-form.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block extracss %}
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock %}
 {% block content %}
+<div class="head-holder">
+    <section class="content-header">
+        <h1>
+            Account Record
+            <small>All</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="{% url 'home' %}"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="{% url 'account' %}">Account Record</a></li>
+            <li class="active">Account Form</li>
+        </ol>
+    </section>
+</div>
     <div class="container">
         <form id="contact" action="" method="post">
             {% csrf_token %}
