--- a/PPMS_backend/static/css/style.css
+++ b/PPMS_backend/static/css/style.css
@@ -112,8 +112,8 @@ fieldset {
 
 #contact button[type="submit"]:hover {
     background: #43A047;
-    -webkit-transition: background 0.3s ease-in-out;
-    -moz-transition: background 0.3s ease-in-out;
+    -webkit-transition: background-color 0.3s ease-in-out;
+    -moz-transition: background-color 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
 }
 
