successfully added bar chart, from database api are remaining

--- a/PPMS_backend/templates/account.html
+++ b/PPMS_backend/templates/account.html
@@ -23,7 +23,7 @@
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
-                        <h3 class="box-title"><a href="{% url 'account-form' %}">Add Record</a></h3>
+                        <h3 class="box-title"><a href="{% url 'account-form' %}"class="add-record">Add Record</a></h3>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
