--- a/PPMS_backend/templates/index.html
+++ b/PPMS_backend/templates/index.html
@@ -13,6 +13,10 @@
         <div class="col-md-6 col-sm-4">
             <canvas id="myChart" width="400" height="350"></canvas>
         </div>
+        <div class="col-md-6 col-sm-4">
+
+            <canvas id="lineChart"></canvas>
+        </div>
     </div>
 </div>
 {% endblock %}
