--- a/PPMS_backend/templates/petrol-nozzle-form.html
+++ b/PPMS_backend/templates/petrol-nozzle-form.html
@@ -23,37 +23,37 @@
             <h3>Petrol Nozzle Form</h3>
             <fieldset>
                 <input placeholder="Opening Reading For Nozzle 1" step="0.01" min="0" max="10000" name="openingReadingForNozzle1" type="number"
-                       tabindex="1" autofocus>
+                       tabindex="1" autofocus required>
             </fieldset>
             <fieldset>
-                <input placeholder="Sale For Nozzle 1" step="0.01" min="0" max="10000" name="saleForNozzle1" type="number" tabindex="2">
+                <input placeholder="Sale For Nozzle 1" required step="0.01" min="0" max="10000" name="saleForNozzle1" type="number" tabindex="2">
             </fieldset>
             <fieldset>
-                <input placeholder="Opening Reading For Nozzle 2" step="0.01" min="0" max="10000" name="openingReadingForNozzle2" type="number"
+                <input placeholder="Opening Reading For Nozzle 2"required step="0.01" min="0" max="10000" name="openingReadingForNozzle2" type="number"
                        tabindex="3">
             </fieldset>
             <fieldset>
-                <input placeholder="Sale For Nozzle 2" step="0.01" min="0" max="10000" name="saleForNozzle2" type="number" tabindex="4">
+                <input placeholder="Sale For Nozzle 2" step="0.01" min="0"required max="10000" name="saleForNozzle2" type="number" tabindex="4">
             </fieldset>
             <fieldset>
-                <input placeholder="Opening Reading For Nozzle 3" step="0.01" min="0" max="10000" name="openingReadingForNozzle3" type="number"
-                       tabindex="5" autofocus>
+                <input placeholder="Opening Reading For Nozzle 3" step="0.01" min="0"required max="10000" name="openingReadingForNozzle3" type="number"
+                       tabindex="5" >
             </fieldset>
             <fieldset>
-                <input placeholder="Sale For Nozzle 3" step="0.01" min="0" max="10000" name="saleForNozzle3" type="number" tabindex="6">
+                <input required placeholder="Sale For Nozzle 3" step="0.01" min="0" max="10000" name="saleForNozzle3" type="number" tabindex="6">
             </fieldset>
             <fieldset>
-                <input placeholder="Opening Reading For Nozzle 4" step="0.01" min="0" max="10000" name="openingReadingForNozzle4" type="number"
+                <input placeholder="Opening Reading For Nozzle 4" step="0.01" min="0" max="10000" name="openingReadingForNozzle4" type="number" required
                        tabindex="7">
             </fieldset>
             <fieldset>
-                <input placeholder="Sale For Nozzle 4" step="0.01" min="0" max="10000" name="saleForNozzle4" type="number" tabindex="8">
+                <input required placeholder="Sale For Nozzle 4" step="0.01" min="0" max="10000" name="saleForNozzle4" type="number" tabindex="8">
             </fieldset>
              <fieldset>
-                <input placeholder="Rate for Petrol" step="0.01" min="0" max="10000" name="rate" type="number" tabindex="9">
+                <input required placeholder="Rate for Petrol" step="0.01" min="0" max="10000" name="rate" type="number" tabindex="9">
             </fieldset>
              <fieldset>
-                <input placeholder="Pump Testing" name="testing" type="text" tabindex="10">
+                <input placeholder="Pump Testing" name="testing" type="number" tabindex="10" required>
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="Sending">Submit</button>
