added real time data to account section and change some css

--- a/PPMS_backend/templates/account-form.html
+++ b/PPMS_backend/templates/account-form.html
@@ -45,7 +45,7 @@
                 <input type="date" name="paymentDate" tabindex="7" required>
             </fieldset>
             <fieldset>
-                <input type="number" name="amountPaid" placeholder="Amount Paid" tabindex="8" required>
+                <input type="number" name="amountPaid" placeholder="How Much Amount is Paid" tabindex="8" required>
             </fieldset>
             <fieldset>
                 <input type="text" name="comment" tabindex="9" placeholder="Comment if any" required>
