--- a/PPMS_backend/templates/account.html
+++ b/PPMS_backend/templates/account.html
@@ -13,7 +13,12 @@
             <small>All</small>
         </h1>
         <ol class="breadcrumb">
-            <li><a href="{% url 'home' %}"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li>
+                <a href="{% url 'home' %}">
+                    <i class="fa fa-dashboard"></i> 
+                    Home
+                </a>
+            </li>
             <li class="active">Account Record</li>
         </ol>
     </section>
