--- a/PPMS_backend/templates/index.html
+++ b/PPMS_backend/templates/index.html
@@ -7,18 +7,25 @@
 </div>
 <div class="outer">
     <div class="row">
-        <div class="col-md-6 col-sm-4">
+        <div class="col-md-6 col-sm-6">
             <canvas id="myChart1" width="400" height="350"></canvas>
         </div>
-        <div class="col-md-6 col-sm-4">
+        <div class="col-md-6 col-sm-6">
             <canvas id="myChart" width="400" height="350"></canvas>
         </div>
-        <div class="col-md-6 col-sm-4">
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-sm-6">
 
             <canvas id="lineChart"></canvas>
         </div>
     </div>
 </div>
 {% endblock %}
+<script>
+    petrolAPI();
+    petrolAPI();
+    mothAPi();
+</script>
 
 
