--- a/PPMS_backend/templates/base.html
+++ b/PPMS_backend/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 <body class=" skin-blue sidebar-mini fixed">
 <div class="wrapper">
-
+{% if user.is_authenticated %}
     <header class="main-header">
         <!-- Logo -->
         <a href="{% url 'home' %}" class="logo">
@@ -53,35 +53,39 @@
         <section class="sidebar">
             <!-- Sidebar user panel -->
             <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
-                </div>
-                <div class="pull-left info">
-                    <p>Alexander Pierce</p>
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                    <a href="#">SignOut</a>
-                </div>
+
+                    <div class="pull-left image">
+                        <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
+                    </div>
+                    <div class="pull-left info">
+                        <p>
+                            <i class="fa fa-circle text-success"></i>
+                            &nbsp;&nbsp;{{ user.username }}
+                            <span>Online</span>
+                        </p>
+                        <a class="btn btn-success" href="{% url 'logout' %}">
+                            SignOut
+                        </a>
+                    </div>
             </div>
 
             <!-- /.search form -->
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" data-widget="tree">
-                <li class="header">MAIN NAVIGATION</li>
+                <br>
                 <li class="active">
                     <a href="{% url 'home' %}">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                        <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
                     </a>
                 </li>
                 <li class="treeview">
-                    <a href="{% url 'home' %}">
+                    <a href="#" >
                         <i class="fa fa-pie-chart"></i>
                         <span>Diesel </span>
                         <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
+                            <i class="fa fa-angle-left pull-right">
+                            </i>
+                        </span>
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="{% url 'diesel' %}"><i class="fa fa-circle-o text-red"></i>Diesel Stock</a></li>
@@ -96,8 +100,8 @@
                         <i class="fa fa-laptop"></i>
                         <span>Petrol</span>
                         <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="{% url 'petrol-stock' %}"><i class="fa fa-circle-o text-danger"></i> Petrol
@@ -114,8 +118,8 @@
                     <a href="{% url 'home' %}">
                         <i class="fa fa-edit"></i> <span>Account</span>
                         <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
                     </a>
                     <ul class="treeview-menu">
                         <li><a href="{% url 'account' %}"><i class="fa fa-circle-o text-red"></i> Account Section</a>
@@ -132,6 +136,28 @@
 
         {% endblock %}
     </div>
+{% else %}
+    <div class="hold-transition login-page">
+        <div class="login-box">
+            <div class="login-logo">
+                <b>Welcome to </b>Login</a>
+            </div>
+            <!-- /.login-logo -->
+            <div class="card">
+                <div class="card-body login-card-body">
+                    <p class="login-box-msg">Sign in to start your session</p>
+                    <div class="social-auth-links text-center mb-3">
+                        <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-block btn-danger">
+                            <i class="fab fa-google-plus mr-2"></i> Sign in using Google+
+                        </a>
+                    </div>
+                    <!-- /.social-auth-links -->
+                </div>
+                <!-- /.login-card-body -->
+            </div>
+        </div>
+    </div>
+{% endif %}
 </div>
 
 <script src="{% static 'js/jquery.min.js' %}"></script>
