--- a/PPMS_backend/templates/account.html
+++ b/PPMS_backend/templates/account.html
@@ -49,7 +49,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for foo in account %}
+                            {% for foo in student_list %}
                                 <tr>
                                     <td>{{ foo.date }}</td>
                                     <td>{{ foo.amountPaid }}</td>
