--- a/PPMS_backend/templates/index.html
+++ b/PPMS_backend/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="head-holder">
-        <h2>Hello {{ user.username }} welcome you, on this portal</h2>
+        <h2>Hello {{ user.username }} </h2>
     </div>
     <div class="outer">
         <div class="row">
