--- a/PPMS_backend/templates/petrol-nozzle.html
+++ b/PPMS_backend/templates/petrol-nozzle.html
@@ -22,7 +22,7 @@
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
-                        <h3 class="box-title"><a href="{% url 'petrol-nozzle-form' %}"class="add-record">Add New Record </a></h3>
+                        <h3 class="box-title"><a href="{% url 'form' %}" class="add-record">Add New Record </a></h3>
                     </div>
                     <table class="table table-bordered">
                         <thead>
